--- a/nodetest1/views/newuser.ejs
+++ b/nodetest1/views/newuser.ejs
@@ -9,6 +9,8 @@
     <form id="formAddUser" name="adduser" method="post" action="/adduser">
       <input id="inputUserName" type="text" placeholder="username" name="username" />
       <input id="inputUserEmail" type="text" placeholder="email" name="useremail" />
+      <input id="inputUserAge" type="text" placeholder="age" name="userage" />
+      <input id="inputUserDob" type="text" placeholder="dob" name="userdob" />
       <button id="btnSubmit" type="submit">Submit</button>
     </form>
   </body>
