added some navagation links

--- a/nodetest1/views/newuser.ejs
+++ b/nodetest1/views/newuser.ejs
@@ -13,5 +13,11 @@
       <input id="inputUserDob" type="text" placeholder="dob" name="userdob" />
       <button id="btnSubmit" type="submit">Submit</button>
     </form>
+    <br>
+    <br>
+    <a href="/userlist">User List</a>
+    <br>
+    <br>
+    <a href="/newuser">New User</a>
   </body>
 </html>
