--- a/nodetest1/views/index.ejs
+++ b/nodetest1/views/index.ejs
@@ -7,5 +7,12 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+    <br>
+    <br>
+    <a href="/userlist">User List</a>
+    <br>
+    <br>
+    <a href="/newuser">New User</a>
+
   </body>
 </html>
