--- a/nodetest1/views/userlist.ejs
+++ b/nodetest1/views/userlist.ejs
@@ -24,6 +24,12 @@
       %>
       <%- list %>
   </table>
+  <br>
+  <br>
+  <a href="/userlist">User List</a>
+  <br>
+  <br>
+  <a href="/newuser">New User</a>
 </body>
 
 </html>
